# WM-Vision

./: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
config/: catalog.info
config/cfvf/: close_door.cfvf  testINFO4.cfvf
config/cfvt/: close_door.cfvt  testINFO.cfvt
include/: vision_interface.h
include/rqt_vision_tools/: dependencesqtablewidget.h  dependencesvalue.h  vision_parser.h  vision_tools.h  visiontree.h
include/vision_kernel/: data.h  input.h  input_manager.h  node_thread_safe_queue.h  thread_safe_queue.h  vision_debug_node.h  vision_flow.h  vision_interface.h  vision_node.h  vision_node_factory.h  vision_parser.h  vision_tree.h
include/vision_kernel/vision_debug_nodes/: image_debug_node.h
include/vision_kernel/vision_nodes/: different_color_betwen_door_and_wall_node.h  door_gap_node.h  edge_detection_node.h  filtred_vertical_line_pairs_node.h  grayscale_node.h  input_image_node.h  line_detection_node.h  openni_node.h  output_gesture_node.h  output_object_boundingbox_node.h  output_object_detail_node.h  output_person_node.h  parallele_line_pair_node.h  threshold_node.h
include/wm_visionKernel/: data.h  input.h  input_manager.h  thread_safe_queue.h  vision_debug_node.h  vision_node.h  vision_node_factory.h  vision_parser.h  vision_tree.h
include/wm_visionKernel/visionNodes/: edge_detection_node.h  grayscale_node.h  line_detection_node.h  openni_node.h  output_gesture_node.h  output_object_boundingbox_node.h  output_object_detail_node.h  output_person_node.h  threshold_node.h
include/wm_visionKernel/vision_debug_nodes/: image_debug_node.h
launch/: vision.launch
src/: vision_interface.cc  vision_kernel.cc
src/rqt_vision_tools/: dependencesqtablewidget.cpp  dependencesvalue.ui  mainwindow.cpp  vision_tools.cpp  visionnode.cpp  visiontree.cpp  visiontree.ui
src/vision_kernel/: vision_debug_node.cc  vision_flow.cc  vision_interface.cc  vision_node.cc  vision_parser.cc  vision_tree.cc
src/vision_kernel/vision_debug_nodes/: image_debug_node.cc
src/vision_kernel/vision_nodes/: different_color_betwen_door_and_wall_node.cc  door_gap_node.cc  edge_detection_node.cc  filtred_vertical_line_pairs_node.cc  grayscale_node.cc  line_detection_node.cc  openni_node.cc  output_gesture_node.cc  output_object_boundingbox_node.cc  output_object_detail_node.cc  output_person_node.cc  parallel_lines_node.cc  parrallel_lines_node.cc  texture_bottom_of_door_node.cc  threshold_node.cc
src/wm_visionKernel/: vision_debug_node.cc  vision_node.cc  vision_parser.cc  vision_tree.cc
src/wm_visionKernel/visionNodes/: edge_detection_node.cc  line_detection_node.cc  openni_node.cc  output_gesture_node.cc  output_object_boundingbox_node.cc  output_object_detail_node.cc  output_person_node.cc  parrallele_line_pair_node.cc  threshold_node.cc
src/wm_visionKernel/vision_debug_nodes/: image_debug_node.cc
wm_kinect2_bridge/: CMakeLists.txt  package.xml
wm_kinect2_bridge/launch/: wm_kinect2_bridge.launch
wm_rqt_vision_tools/: CMakeLists.txt  package.xml  plugin.xml  setup.py
wm_rqt_vision_tools/include/rqt_vision_tools/: mainwindow.h  ratio_layouted_frame.h  visionnode.h
wm_rqt_vision_tools/scripts/: rqt_vision_tools
wm_rqt_vision_tools/src/rqt_vision_tools/: dependencesvalue.cpp  mainwindow.cpp  mainwindow.ui  ratio_layouted_frame.cpp  vision_parser.cc  vision_tools.ui  visionnode.ui
wm_vision_kernel/: CMakeLists.txt  package.xml
wm_vision_kernel/config/: catalog.info
wm_vision_kernel/config/cfvf/: close_door.cfvf  dynamic_find.cfvf
wm_vision_kernel/include/vision_kernel/: data.h  input.h  input_manager.h  node_thread_safe_queue.h  vision_debug_node.h  vision_errors.h  vision_flow.h  vision_interface.h  vision_node.h  vision_node_factory.h  vision_parser.h
wm_vision_kernel/include/vision_kernel/vision_debug_nodes/: image_debug_node.h
wm_vision_kernel/include/vision_kernel/vision_nodes/: filtred_horizontal_line_pairs_node.h  filtred_vertical_line_pairs_node.h  input_video_capture_node.h  line_detection_node.h  object_detection_node.h  output_person_node.h  parallel_lines_node.h  texture_bottom_of_door_node.h
wm_vision_kernel/launch/: vision.launch
wm_vision_kernel/src/: vision_kernel.cc
wm_vision_kernel/src/vision_kernel/: vision_debug_node.cc  vision_flow.cc  vision_interface.cc  vision_node.cc  vision_parser.cc
wm_vision_kernel/src/vision_kernel/vision_debug_nodes/: image_debug_node.cc
wm_vision_kernel/src/vision_kernel/vision_nodes/: different_color_betwen_door_and_wall_node.cc  door_gap_node.cc  filtred_horizontal_line_pairs_node.cc  filtred_vertical_line_pairs_node.cc  grayscale_node.cc  input_image_node.cc  input_video_capture_node.cc  object_detection_node.cc  output_gesture_node.cc  output_object_boundingbox_node.cc  output_person_node.cc  parallel_lines_node.cc  texture_bottom_of_door_node.cc  threshold_node.cc
wm_vision_kernel/srv/: wm_vision_interface_flow.srv
