<?xml version="1.0"?>
<package>
  <name>wm_rqt_vision_tools</name>
  <version>1.1.0</version>
  <description>Set of rqt tools for wm_vision_kernel</description>
  <maintainer email="keaven.martin@gmail.com">Keaven Martin</maintainer>
  <author>Keaven Martin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/wm_rqt_vision_tools</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>wm_vision_kernel</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>wm_vision_kernel</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
