<?xml version="1.0"?>
<package>
  <name>wm_vision_kernel</name>
  <version>1.1.0</version>
  <description>Vision kernel</description>
  <maintainer email="keaven.martin@gmail.com">Keaven Martin</maintainer>
  <author>Keaven Martin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/wm_vision_kernel</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
